doc-surrealdb_versioned_docs/version-2.x/surrealql/datamodel/datetimes.mdx
---
sidebar_position: 14
sidebar_label: Datetimes
title: Datetimes | SurrealQL
description: SurrealDB has native support for datetimes with nanosecond precision. SurrealDB automatically parses and understands datetimes which are written as strings in the SurrealQL language.

---


# Datetimes

SurrealDB has native support for datetimes with nanosecond precision. SurrealDB automatically parses and understands datetimes which are written as strings in the SurrealQL language. Times must also be formatted in an [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601) format.

```surql
CREATE event SET time = d"2023-07-03T07:18:52Z";
```
SurrealDB handles all datetimes with nanosecond precision.

```surql
CREATE event SET time = d"2023-07-03T07:18:52.841147Z";
```

SurrealDB handles all timezones, and automatically converts and stores datetimes as a UTC date.

```surql
CREATE event SET time = d"2023-07-03T07:18:52.841147+02:00";
```

The above queries will all work even if the datetime format is incorrect, but will generate a `string` instead of a `datetime`. Casting with `<datetime>` will force an error if the input is incorrect.

With correct input:

```surql
CREATE event SET time = <datetime>"2023-07-03T07:18:52.841147Z";
```

```bash title="Response"
[[{ id: event:jwm8ncmfi30nrxdf24ws, time: d'2023-07-03T07:18:52.841147Z' }]]
```

With incorrect input (missing final Z):

```surql
CREATE event SET time = <datetime>"2023-07-03T07:18:52.841147";
```

```bash title="Response"
"Expected a datetime but cannot convert '2023-07-03T07:18:52.841147' into a datetime"
```

:::note
__Note:__ As a convenience, a date without time will always parse correctly as a datetime.
:::

```surql
CREATE event SET time = <datetime>"2024-04-03";
```

```bash title="Response"
"2024-03-04T00:00:00Z"
```

## Datatime types in schemafull tables

Defining a schemafull table will also ensure that datetimes are properly formatted and not passed on as simple strings.

```surql
DEFINE TABLE event SCHEMAFULL;
DEFINE FIELD time ON event TYPE datetime;
// highlight-next-line
CREATE event SET time = "2023-07-03T07:18:52.841147";
```

```bash title="Response"
"Found '2023-07-03T07:18:52.841147' for field `time`, with record `event:l4q1s7hermg9yoemkqrp`, but expected a datetime"
```

The above query will fail because the datetime is not cast as a datetime type. The correct query is:

```surql
DEFINE TABLE event SCHEMAFULL;
DEFINE FIELD time ON event TYPE datetime;
// highlight-next-line
CREATE event SET time = d"2023-07-03T07:18:52.84114Z";
```

```bash title="Response"
[NONE, NONE, [{ id: event:a3g30bdxypvt21tf3jo0, time: d'2023-07-03T07:18:52.841140Z' }]]
```

### Datetime comparison
A datetime can be compared with another using the advanced SurrealDB operators.

```surql
SELECT * FROM d"2023-07-03T07:18:52Z" < d"2023-07-03T07:18:52.84114Z";
```
    
```bash title="Response"
    [[true]]
```

## Durations and datetimes

Durations can be used to modify and alter datetimes.

```surql
CREATE event SET time = d"2023-07-03T07:18:52Z" + 2w;
```
    
    ```bash title="Response"
    [[{ id: event:⟨9ey7v8r0fd46xblf9dsf⟩, time: d'2023-07-17T07:18:52Z' }]] 
    ```

Multi-part durations can also be used to modify datetimes.

```surql
CREATE event SET time = d"2023-07-03T07:18:52.841147Z" + 1h30m20s1350ms;
```

```bash title="Response"
[[{ id: event:⟨9ey7v8r0fd46xblf9dsf⟩, time: d'2023-07-03T08:49:14.191147Z' }]]
```

### Duration units

Durations can be specified in any of the following units:

<table>
    <thead>
    <tr>
        <th scope="col">Unit</th>
        <th scope="col">Description</th>
    </tr>
    </thead>
    <tbody>
        <tr>
            <td scope="row" data-label="Type">ns</td>
            <td scope="row" data-label="Description">Nanoseconds</td>
        </tr>
        <tr>
            <td scope="row" data-label="Type">us</td>
            <td scope="row" data-label="Description">Microseconds, alternative: µs</td>
        </tr>
        <tr>
            <td scope="row" data-label="Type">ms</td>
            <td scope="row" data-label="Description">Milliseconds</td>
        </tr>
        <tr>
            <td scope="row" data-label="Type">s</td>
            <td scope="row" data-label="Description">Seconds</td>
        </tr>
        <tr>
            <td scope="row" data-label="Type">m</td>
            <td scope="row" data-label="Description">Minutes</td>
        </tr>
        <tr>
            <td scope="row" data-label="Type">h</td>
            <td scope="row" data-label="Description">Hours</td>
        </tr>
        <tr>
            <td scope="row" data-label="Type">d</td>
            <td scope="row" data-label="Description">Days</td>
        </tr>
        <tr>
            <td scope="row" data-label="Type">w</td>
            <td scope="row" data-label="Description">Weeks</td>
        </tr>
        <tr>
            <td scope="row" data-label="Type">y</td>
            <td scope="row" data-label="Description">Years</td>
        </tr>
    </tbody>
</table>

## Next steps
You've now seen how to store, modify, and handle dates and times in SurrealDB. For more advanced functionality, take a look at the [time](/docs/surrealdb/2.x/surrealql/functions/database/time) functions, which enable extracting, altering, rounding, and grouping datetimes into specific time intervals.